2011-06-17  Meteor Liu  <meteor1113@gmail.com>

	* init-basic.el: backspace key for aix.
	(cedet-possible-dirs): if have offical cedet.

2011-06-16  Meteor Liu  <meteor1113@gmail.com>

	* init-basic.el (auto-insert-expand): autoinsert.

2011-06-15  Meteor Liu  <meteor1113@gmail.com>

	* init-basic.el (write-file-hooks): time-stamp.
	(auto-insert-mode): auto-insert setting.

2011-06-14  Meteor Liu  <meteor1113@gmail.com>

	* init-basic.el: Make ecb support emacs-lisp-mode in build in cedet.

2011-06-09  Meteor Liu  <meteor1113@gmail.com>

	* init-basic.el (buffers-menu-max-size): More buffers menu.

	* init-misc.el: Add dos-mode.

2011-06-08  Meteor Liu  <meteor1113@gmail.com>

	* init-basic.el (recentf-track-closed-file): Adviced. Move to
	beginning of the recent list after killed.
	(undo-kill-buffer): Add.

2011-06-07  Meteor Liu  <meteor1113@gmail.com>

	* init-misc.el (svn-status): Add psvn.

	* init-site.el: visual bookmarks support mouse.

2011-06-03  Meteor Liu  <meteor1113@gmail.com>

	* init-misc.el (word-count-mode): Add word-count.el

2011-05-27  Meteor Liu  <meteor1113@gmail.com>

	* init-basic.el: Use comment-dwim instead of comment-or-uncomment-region.

2011-05-23  Meteor Liu  <meteor1113@gmail.com>

	* init-basic.el: Set appt and diary.

2011-05-20  Meteor Liu  <meteor1113@gmail.com>

	* init-misc.el: Fix highlight-symbol-face.

2011-05-18  Meteor Liu  <meteor1113@gmail.com>

	* init-misc.el: Don't auto load emms history when daemon.

2011-05-17  Meteor Liu  <meteor1113@gmail.com>

	* init-misc.el: Auto save and load emms history.

	* init-toolbar.el: Update emms setting.

2011-05-16  Meteor Liu  <meteor1113@gmail.com>

	* init-toolbar.el: Add line-wrap toolbar item.

2011-05-12  Meteor Liu  <meteor1113@gmail.com>

	* init-site.el: Update ecb setting.

2011-05-11  Meteor Liu  <meteor1113@gmail.com>

	* init-basic.el (format-cxx-directory): Add format-cxx-directory.

2011-05-10  Meteor Liu  <meteor1113@gmail.com>
