@@ -1,3 +1,9 @@
+2011-06-18  Meteor Liu  <meteor1113@gmail.com>
+
+	* init-site.el (ecb-autoloads): for compatible.
+
+	* init-basic.el: Don't report error when can't found gcc.
+
 2011-06-17  Meteor Liu  <meteor1113@gmail.com>
 
 	* init-basic.el: backspace key for aix.
